# korea-life-mcp

./: .gitignore  Dockerfile  README.md  korea_tools.py  pyproject.toml  server.py  test_tools.py
assets/: make_icon.py
deploy/: Caddyfile  DEPLOY.md  docker-compose.yml
