[project]
name = "korea-life-mcp"
version = "0.1.0"
description = "한국 생활 특화 유틸리티 MCP 서버 (PlayMCP 공모전 제출용) — 자모 분해/로마자/한글 금액/번호 검증/공휴일"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
korea-life-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
py-modules = ["server", "korea_tools"]
